# rag-document-assistant

./: .env.example  .gitignore  EVALUATION.md  README.md  pyproject.toml  requirements.txt
notebooks/: rag_evaluation.ipynb  vector_store_test.ipynb
notebooks/evaluation/: evaluation_results.csv
notebooks/evaluation/datasets/: LB5001.json  MN414_0224.json  WEG-CESTARI-manual-iom-guia-consulta-rapida-50111652-pt-en-es-web.json  WEG-motores-eletricos-guia-de-especificacao-50032749-brochure-portuguese-web.json
src/: config.py  logging_config.py  main.py  schemas.py
src/agent/: agent.py  factory.py  prompts.py  tools.py
src/services/: chat_service.py  document_indexer.py  llm_provider.py  vector_store.py
src/templates/: base.html  index.html
src/templates/fragments/: llm_response.html
